--- a/CNPMNC1/Views/SanPham/Index.cshtml
+++ b/CNPMNC1/Views/SanPham/Index.cshtml
@@ -66,11 +66,12 @@
             <img src="@Url.Content(item.ImagePro)" height="150" width="150" />
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id = item.idsanpham}) |
-            @Html.ActionLink("Details", "Details", new { id = item.idsanpham }) |
+            @Html.ActionLink("Edit", "Edit", new { id = item.idsanpham }) |
             @Html.ActionLink("Delete", "Delete", new { id = item.idsanpham })
+            <a href="@Url.Action("AddToCart","GioHang", new {id = item.idsanpham})">Buy</a>
+
         </td>
-    </tr>
+    </tr>   
 }
 
 </table>
