--- a/CNPMNC1/Views/GioHang/EmptyCart.cshtml
+++ b/CNPMNC1/Views/GioHang/EmptyCart.cshtml
@@ -1,5 +1,5 @@
 ﻿<h2>Giỏ Hàng</h2>
-<a href="@Url.Action("Index","Product")">Tiếp tục mua hàng</a>
+<a href="@Url.Action("Index","SanPham")">Tiếp tục mua hàng</a>
 <table class="table">
     <thead>
         <tr>
