--- a/CNPMNC1/Views/DangnhapDangky/Dangky.cshtml
+++ b/CNPMNC1/Views/DangnhapDangky/Dangky.cshtml
@@ -5,68 +5,75 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Dangky</h2>
-
-
-@using (Html.BeginForm("Dangky", "DangnhapDangky", FormMethod.Post, new { enctype = "multipart/form-data" })) 
-{
-    @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>TaiKhoan</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.email, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.email, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.email, "", new { @class = "text-danger" })
-            </div>
+<style>
+    .field-validation-error {
+        color: red;
+    }
+</style>
+<body style="max-width:12000px; margin:auto;">
+    <div style="argin-top: 100px;text-align: center; margin-bottom: 25px;">
+        <h2 style=" padding: 30px 0px;">Đăng ký Smember</h2>
+        <div>
+            <img src="~/Content/images/img.jpg" />
         </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.phone, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.phone, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.phone, "", new { @class = "text-danger" })
+        @using (Html.BeginForm("Dangky", "DangnhapDangky", FormMethod.Post, new { enctype = "multipart/form-data" }))
+        {
+            @Html.AntiForgeryToken()
+            if (ViewBag.ErrorRegister != null)
+            {
+                <p>@ViewBag.ErrorRegister</p>
+            }
+            <div>
+                <tr>
+                    <div style="display: flex; margin-left: 400px; padding: 30px 0px; ">
+                        <p style=" margin: 0px;">Nhập Tên Tài Khoản: </p>
+                        <input id="email" name="email" type="text" value="" style="border: 0px; border-bottom: 0.5px solid#00000030; margin-left: 20px; width: 500px; ">
+                    <td>@Html.ValidationMessageFor(model => model.email)</td>
             </div>
+            </tr>
+            <tr>
+                <div style="display: flex; margin-left: 400px; padding: 30px 0px; ">
+                    <p style=" margin: 0px;">Nhập Tên Tài Khoản: </p>
+                    <input id="pass" name="pass" type="password" value="" style="border: 0px; border-bottom: 0.5px solid#00000030; margin-left: 20px; width: 500px; ">
+                <td>@Html.ValidationMessageFor(model => model.pass)</td>
         </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.pass, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.pass, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.pass, "", new { @class = "text-danger" })
+        </tr>
+        <tr>
+            <div style="display: flex; margin-left: 400px; padding: 30px 0px; ">
+                <p style=" margin: 0px;">Nhập Mật Khẩu Tài Khoản: </p>
+                <input id="phone" name="phone" type="text" value="" style="border: 0px; border-bottom: 0.5px solid#00000030; margin-left: 20px; width: 500px; ">
+            <td>@Html.ValidationMessageFor(model => model.phone)</td>
+            @if (ViewBag.ErrorInfo == null)
+            {
+                <p> @ViewBag.ErrorInfo</p>
+            }
             </div>
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(model => model.diachi, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.diachi, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.diachi, "", new { @class = "text-danger" })
+        </tr>
+        <tr>
+            <div style="display: flex; margin-left: 400px; padding: 30px 0px; ">
+                <p style=" margin: 0px;">Nhập Tên Tài Khoản: </p>
+                <input id="name" name="name" type="text" value="" style="border: 0px; border-bottom: 0.5px solid#00000030; margin-left: 20px; width: 500px; ">
+            <td>@Html.ValidationMessageFor(model => model.name)</td>
             </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.name, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.name, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.name, "", new { @class = "text-danger" })
+        </tr>
+        <tr>
+            <div style="display: flex; margin-left: 400px; padding: 30px 0px; ">
+                <p style=" margin: 0px;">Nhập Địa Chỉ: </p>
+                <input id="diachi" name="diachi" type="text" value="" style="border: 0px; border-bottom: 0.5px solid#00000030; margin-left: 20px; width: 500px; ">
+            <td>@Html.ValidationMessageFor(model => model.diachi)</td>
             </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+        </tr>
+        <tr>
+            <div style="padding: 20px 0px; ">
+            <td><a href="@Url.Action("DangNhap","DangnhapDangky")" style="padding: 6px 40px; border-radius: 10px; border: 1px; margin-right: 20px; background-color: #ff255b; color: black; text-decoration: none; ">Đăng Nhập</a></td>
+            <td><input type="submit" value="Đăng Ký" style=" padding: 5px 30px; border-radius: 10px; border: 1px; background-color: #ff255b;" /></td>
             </div>
+        </tr>
         </div>
-    </div>
-}
+    }
+        </div>
+    </body>
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
-
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
+    @section Scripts {
+        @Scripts.Render("~/bundles/jqueryval")
+    }
