--- a/CNPMNC1/Views/DangnhapDangky/DangNhap.cshtml
+++ b/CNPMNC1/Views/DangnhapDangky/DangNhap.cshtml
@@ -4,39 +4,42 @@
     ViewBag.Title = "DangNhap";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-<h2>Dangnhap</h2>
-
-@using (Html.BeginForm("Dangnhap", "DangnhapDangky"))
-{
-    @Html.AntiForgeryToken()
-
-    <div class="form-horizontal">
-        <h4>TaiKhoan</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.email, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.email, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.email, "", new { @class = "text-danger" })
-            </div>
+<body style="max-width:12000px; margin:auto;">
+    <div style="margin-top: 100px;text-align: center; margin-bottom: 25px;">
+        <h2 style=" padding: 30px 0px;">Đăng Nhập Smember</h2>
+        <div>
+            <img src="~/Content/images/img.jpg" />
         </div>
-        <div class="form-group">
-            @Html.LabelFor(model => model.pass, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.pass, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.pass, "", new { @class = "text-danger" })
-            </div>
-        </div>
-        @if (ViewBag.ErrorDangNhap == null)
+        @using (Html.BeginForm("Dangnhap", "DangnhapDangky"))
         {
-            <p>@ViewBag.ErrorDangNhap</p>
-        }
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Login" class="btn btn-default" />
+            @Html.AntiForgeryToken()
+            <div>
+                <tr>
+                    <div style="display: flex; margin-left: 400px; padding: 30px 0px; ">
+                        <p style=" margin: 0px;">Nhập Email Tài Khoản: </p>
+                        <input id="email" name="email" type="text" value="" style="border: 0px; border-bottom: 0.5px solid#00000030; margin-left: 20px; width: 500px; ">
+                    <td>@Html.ValidationMessageFor(model => model.email)</td>
             </div>
+            </tr>
+            <tr>
+                <div style="display: flex; margin-left: 400px; padding: 30px 0px; ">
+                    <p style=" margin: 0px;">Nhập Mật Khẩu Tài Khoản: </p>
+                    <input id="pass" name="pass" type="password" value="" style="border: 0px; border-bottom: 0.5px solid#00000030; margin-left: 20px; width: 500px; ">
+                <td>@Html.ValidationMessageFor(model => model.pass)</td>
+                @if (ViewBag.ErrorInfo == null)
+                {
+                    <p> @ViewBag.ErrorInfo</p>
+                }
         </div>
-    </div>
-}
+        </tr>
+        <tr>
+            <div style="padding: 20px 0px; ">
+            <td><a href="@Url.Action("Dangky","DangnhapDangky")" style="padding: 6px 40px; border-radius: 10px; border: 1px; margin-right: 20px; background-color: #ff255b; color: black; text-decoration: none; ">Đăng Ký</a></td>
+            <td><input type="submit" value="Đăng Nhập" style=" padding: 5px 30px; border-radius: 10px; border: 1px; background-color: #ff255b;" /></td>
+            </div>
+        </tr>
+        </div>
+    }
+        </div>
+</body>
+
